# ece-city-3-g

./: .gitignore  CMakeLists.txt
include/: affichage.h  batiment.h  bfs.h  carte.h  destruction.h  fichier.h  jeu.h  menu_principal.h  placement.h  route.h  sauvegarde.h  spritesheet.h  tuile.h  ui.h
include/screens/: gameplay.h  sim_test.h
include/sim/: casernes.h  centrale.h  chateau.h  habitation.h  pompier.h  route.h  sauvegarde.h  sim.h
include/utils/: capacite.h  grille.h  liste.h  vector.h
resources/file/txt/: carte.txt
saves/txt/: auto.txt
src/: affichage.c  batiment.c  bfs.c  carte.c  fichier.c  gameplay.c  jeu.c  liste.c  main.c  menu_principal.c  route.c  sauvegarde.c  sim_test.c  spritesheet.c  tuile.c  ui.c
src/actions/: destruction.c  placement.c
src/sim/: casernes.c  centrale.c  chateau.c  habitation.c  pompier.c  route.c  sauvegarde.c  sim.c
src/utils/: capacite.c  grille.c  liste.c  vector.c
tests/: CMakeLists.txt  tests_liste.c  tests_vector.c
tests/sim/: test_sim_habitation.c
